--- a/mediaquery/skill_rs.css
+++ b/mediaquery/skill_rs.css
@@ -51,7 +51,7 @@
 @media (min-width: 480px) and (max-width: 767.9px) {
     .skill-container1 {
         flex-direction: column;
-        padding: 50px 0;
+        justify-content: space-evenly;
     }
 
     .skill-container1 h1 {
@@ -81,7 +81,8 @@
 @media (min-width: 768px) and (max-width: 1024px) {
     .skill-container1 {
         flex-direction: column;
-        padding: 50px 0;
+        justify-content: space-evenly;
+        /* padding: 50px 0; */
     }
 
     .skill-container1 h1 {
